--- a/stylesheet.css
+++ b/stylesheet.css
@@ -136,6 +136,7 @@ text-align: middle;
 		border-radius: 5px;
 		padding:20px;
 		font-size: 120%;
+		line-height:200%;
 		}
 		
 .main 	ul li {padding: 5px 0px; }
@@ -144,7 +145,7 @@ text-align: middle;
 		  display: block;
 		  margin-left: auto;
 		  margin-right: auto;
-		  width: 70%;
+		  width: 100%;
 		}
 .caption{
 		font-style: oblique;
