--- a/stylesheet.css
+++ b/stylesheet.css
@@ -145,7 +145,7 @@ text-align: middle;
 		  display: block;
 		  margin-left: auto;
 		  margin-right: auto;
-		  width: 90%;
+		  width: 700px;
 		}
 .caption{
 		font-style: oblique;
@@ -161,7 +161,7 @@ text-align: middle;
 	box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
 	padding: 10px;
 	width: 260px;
-	line-height:150%;
+	line-height:200%;
 	margin-left: 10px;
 	margin-right: 10px;
 	margin-top: 0px;
