--- a/stylesheet.css
+++ b/stylesheet.css
@@ -145,7 +145,7 @@ text-align: middle;
 		  display: block;
 		  margin-left: auto;
 		  margin-right: auto;
-		  width: 700px;
+		  width: 90%;
 		}
 .caption{
 		font-style: oblique;
